test HTML report

--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -32,9 +32,7 @@ pipeline {
 
         stage('Deny based on Access Token - Allow') {
             steps {
-                sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties'
-                //perfReport errorFailedThreshold: 0, errorUnstableThreshold: 0, compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
-                // perfReport compareBuildPrevious: true, modeOfThreshold: true, modePerformancePerTestCase: true, modeThroughput: true, relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'access-api.csv'
+                sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -e -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties'
                 perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'access-api.csv'
             }
         }
@@ -42,8 +40,6 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/deny-api.jmx -l deny-api.csv -q apache-jmeter/scripts/test.properties'
-                //perfReport errorFailedThreshold: 0, errorUnstableThreshold: 0, compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
-                // perfReport compareBuildPrevious: true, modeOfThreshold: true, modePerformancePerTestCase: true, modeThroughput: true, relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'deny-api.csv'
                 perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'deny-api.csv'
             }
         }
